--- a/project3/index.html
+++ b/project3/index.html
@@ -5,18 +5,42 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>vue</title>
+  <title>Vue-Learning</title>
 
   <link rel="stylesheet" href="../bower_components/bootstrap/dist/css/bootstrap.css">
 
   <script src="../bower_components/vue/dist/vue.js"></script>
+
+  <style>
+    body {
+    min-height: 1000px;
+  }
+  </style>
 </head>
 
 <body>
 
-  <div class="container mt-4" id="app">
+  <div class="container mt-2" id="app">
     <div class="row justify-contain-center">
-      <div class="col-md-8">
+
+      <div class="col-sm-12">
+        <ul class="nav nav-tabs">
+          <li class="nav-item">
+            <a class="nav-link" href="#">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" v-bind:class="{active:isActive}" href="#">HTML</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">CSS</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">JS</a>
+          </li>
+        </ul>
+      </div>
+
+      <div class="mt-3 col-md-8 offset-md-2">
         <div class="card">
           <div class="card-header">
             <h1> Learning Vue JS</h1>
@@ -43,7 +67,7 @@
             </div>
 
             <div class="form-group">
-              <div class="col-sm-2">Skills</div>
+              <div class="col-sm-4">Skills</div>
 
               <div class="col-sm-10">
                 <div class="form-check">
@@ -74,23 +98,35 @@
               </div>
             </div>
 
-            <div class="col-sm-2">Gender</div>
+            <div class="col-sm-4">Gender</div>
             <div class="form-check">
               <input class="form-check-input" type="radio" name="gridRadios" id="male" value="male" v-model="gender">
               <label class="form-check-label" for="Male">Male</label>
             </div>
 
             <div class="form-check">
-                <input class="form-check-input" type="radio" name="gridRadios" id="female" value="female" v-model="gender">
-                <label class="form-check-label" for="Female">Female</label><br>
-                {{ gender }}
-              </div>
+              <input class="form-check-input" type="radio" name="gridRadios" id="female" value="female" v-model="gender">
+              <label class="form-check-label" for="Female">Female</label><br>
+              {{ gender }}
+            </div>
+
+            <div class="card-footer text-muted">
+              <a :href="facebook.url" v-bind:title="facebook.title">{{ facebook.name }}</a>
+              <a :href="youtube.url" :title="youtube.title">{{ youtube.name }}</a>
+            </div>
 
           </div>
-
         </div>
       </div>
+
     </div>
+
+    <div class="text-success" v-bind:class="{'text-danger':hssError}"> Class Binding</div>
+
+    <div v-bind:style="{ color:txtColor, background:bgColor }"> Inline style Binding</div>
+
+    <div v-bind:style="objStyle"> Inline style Binding width Object</div>
+
   </div>
 
   <!-- <div id="app">
@@ -102,11 +138,32 @@
     var vm = new Vue({
       el: '#app',
       data: {
+        isActive: true,
         message: 'Name',
         name: '',
         country: '',
         skill: [],
-        gender: ''
+        gender: '',
+        facebook: {
+          name: 'Facebook',
+          title: 'Selftics Facebook Page',
+          url: 'https://facebook.com/selftics'
+        },
+        youtube: {
+          name: 'Youtube',
+          title: 'Selftics Youtube Channel',
+          url: 'https://www.youtube.com/channel/UCmjhHTGoonflm3lgKlKlOrA'
+        },
+        hssError: true,
+        txtColor: '#e8e8e8',
+        bgColor: '#555',
+
+        objStyle: {
+          color: "orange",
+          background: '#ccc',
+          border: '2px solid blue',
+          fontSize: '20px'
+        }
       }
     })
   </script>
